test of draggable and droppable element

--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
 	<script src="js/dnd.js"></script>
 
 </head>
-<body page="index">
+<body page="shop">
 
 	<header>
 		<ul>
@@ -40,7 +40,55 @@
 
 
 	<main>
+		<div class="area-for-sale">
+			<div id="shop">
+				<div class="slot">
+					<div class="item ui-widget-content" buy_price="10 SC">
+						<span parent="shop">Shop</span> Item [ 1 ]
+					</div>
+				</div>
+				<div class="slot">
+					<div class="item" buy_price="35 SC">
+						<span parent="shop">Shop</span> Item [ 2 ]
+					</div>
+				</div>
+				<div class="slot">
+					<div class="item" buy_price="21 SC">
+						<span parent="shop">Shop</span> Item [ 3 ]
+					</div>
+				</div>
+				<div class="slot">
+					<div class="item" buy_price="72 SC">
+						<span parent="shop">Shop</span> Item [ 4 ]
+					</div>
+				</div>
+			</div>
 
+			<div id="inventory">
+				<div class="slot free"></div>
+
+				<div class="slot">
+					<div class="item" sell_price="19 SC">
+						<span parent="inventory">Inventory</span> Item [ 1 ]
+					</div>
+				</div>
+				<div class="slot">
+					<div class="item" sell_price="13 SC">
+						<span parent="inventory">Inventory</span> Item [ 2 ]
+					</div>
+				</div>
+				<div class="slot">
+					<div class="item" sell_price="11 SC">
+						<span parent="inventory">Inventory</span> Item [ 3 ]
+					</div>
+				</div>
+				<div class="slot">
+					<div class="item" sell_price="31 SC">
+						<span parent="inventory">Inventory</span> Item [ 4 ]
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 
 
